# The-Caverns-Original

./: .flake8  .gitignore  .gitmodules  .replit  CMakeLists.txt  Cargo.toml  README.md  TODO.md  The-Caverns.code-workspace  __init__.py  animations.py  animations.spec  background.py  build.bat  build.macos.sh  build.sh  camera.py  colors.py  deadCheck.sh  depend.py  entity.py  flake.nix  fx.py  game.py  game.store  hud.py  keyManager.py  level.py  levels.py  lint.sh  main.py  main.spec  map.py  menu.py  menus.py  overlay.py  player.py  preview.html  profile.sh  pyproject.toml  (+12 more)
assets/: Underground Palette (Formatted).aseprite  palette.txt  swordcon-adv.tsx
assets/Paint.net/: warrior.pdn
assets/Tiled/: 32x32 Matt Palette.tsx  Caverns Floor 1.tsx  Project0-tileset1.tsx  Project0.tiled-session  The Caverns.tiled-project  The Caverns.tiled-session  Ugly-rock-dirt.aseprite  cave1.json  cave1.tiled-session  cave1.tmx  cave2.tmx  cave3.tmx  floor1-features-black.aseprite  floor1-features.aseprite  floor1-features.tsx  floorwalls.aseprite  room1-floor1.tmx  room2-floor1.tmx  swordcon-basic.tsx  test.tmx  tile-experiment.aseprite  tiles_paletted(black)).aseprite  tiles_paletted.aseprite  tileset1.aseprite  tileset2.aseprite  walls.tmx
assets/enemies/: bury creature.aseprite  dart.aseprite  grab_plant.aseprite  soul-devourer.aseprite  splat.aseprite  tormentor1.aseprite  zombie.aseprite
assets/floorMappings/: floor1.json
assets/fonts/: OFL.txt
assets/items/: shield.aseprite
assets/levelData/: floorData.json
assets/levels/: level1.json  level2.json
assets/objects/: Chest.xcf  campfire.ase  fungus.aseprite  npc1.aseprite
assets/palettes/: Underground Palette BRIGHT(Formatted).aseprite  palette.css  palette.hex
assets/player/: Sprite-0002.aseprite  fireball.aseprite  idle.aseprite  player.aseprite  playerConcept.aseprite  playerHit1.aseprite  player_hitting.aseprite  player_hitting_dagger.aseprite  player_running.aseprite  running.aseprite  samplePlayer.aseprite  sw1.aseprite
assets/screens/: part_one.aseprite
assets/shaders/: blank.frag  bloom.frag  darkness.frag  fragment_glow.glsl  lightning.frag  swizzle.frag  warp.frag
assets/ui/: armor_slotv2.aseprite
effects/: __init__.py  effect.py  hurtEffect.py
enemies/: __init__.py  ankheg.py  bat.py  eBullet.py  enemy.py  goblin.py  imageSheet.py  rat.py  ratBoss.py  template.py  tormentor.py  zombie.py
engine/: camera.hpp  engine.hpp  exceptions.hpp  level.hpp  sprite.hpp  surface.hpp  textSurface.hpp  window.hpp
engine/collision/: collision.hpp  rect.hpp
engine/level/: floor.hpp  room.hpp
engine/tiled/: layer.hpp  map.hpp  tiled.hpp
engine/ui/: menu.hpp  overlay.hpp
inventory/: __init__.py  inventory.py  inventoryItem.py  inventoryItemOwner.py
items/: __init__.py  dagger.py  item.py  sword.py  weapon.py
items/weapons/: __init__.py  dagger.py  sword.py
lib/: tileson.hpp
menu/: __init__.py  button.py  image.py  text.py
menus/: __init__.py  button.py  menu.py  menuItem.py  text.py
objects/: __init__.py  base.py  chest.py  coins.py  consumable.py  doors.py  hpbar.py  keys.py  lights.py  meters.py  navig.py  npc1.py  platforms.py  playerItems.py  projectiles.py  rebound.py  spawners.py  walls.py
overlay/: __init__.py  dialogue.py  inventory.py  map.py  overlay.py  pause.py
screens/: __init__.py  gameScreen.py  screen.py  screenManager.py
src/: __init__.py  animations.py  animationsNew.py  build.py  game.cpp  game.hpp  game.py  game.rs  game.store  hud.py  levels.py  main.cpp  main.rs  mainMenu.cpp  menus.py  player.py  prefabs.py  scripts.py  settings.rs  sfx.py  stats.py  stgs.py  theCaverns.hpp
styleGuide/: README.md  code.md
test/: factoring.py
(+182 files in other folders)
