[project]
name = "the-caverns"
version = "0.1.0"
description = "An exploration ARPG game made in python with pygame."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pytmx>=3.32",
]
authors = ["LGgameLAB", "Ben Landon"]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "pep8-naming>=0.14.1",
]
